[package]
name = "herd-daemon"
version = "0.1.0"
authors = ["jalhadi <jalhadi@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.24.0"
hyper = "0.10.16"
serde = { version = "1.0.0", features=["derive"] }
serde_json = "1.0"
zmq = { version="0.9.2", features=["vendored"]}
clap = { git = "https://github.com/clap-rs/clap/" }
daemonize = "0.4.1"
mac_address = "1.0.2"
uuid = { version = "0.8", features = ["v5"] }
